--- a/templates/home.html
+++ b/templates/home.html
@@ -2,11 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+    {% if title %}
+    <title>Home Page - {{ title }} </title>
+    {% else %}
     <title>Home Page</title>
+    {% endif %}
+
     <h1>Home Page</h1>
     <p>Blogging Site</p>
 </head>
 <body>
-
+    {% for post in posts %}
+    <h2> {{ post.title }} </h2>
+    <p> {{ post.author }} </p>
+    <p> {{ post.date }} </p>
+    <p> {{ post.content}} </p>
+    {% endfor %}
 </body>
 </html>
