--- a/templates/home.html
+++ b/templates/home.html
@@ -1,23 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-
-    {% if title %}
-    <title>Home Page - {{ title }} </title>
-    {% else %}
-    <title>Home Page</title>
-    {% endif %}
-
-    <h1>Home Page</h1>
-    <p>Blogging Site</p>
-</head>
-<body>
+{% extends "layout.html" %}
+{% block content %}
     {% for post in posts %}
-    <h2> {{ post.title }} </h2>
-    <p> {{ post.author }} </p>
-    <p> {{ post.date }} </p>
-    <p> {{ post.content}} </p>
+    <article class="media content-section">
+      <div class="media-body">
+        <div class="article-metadata">
+          <a class="mr-2" href="#">{{ post.author }}</a>
+          <small class="text-muted">{{ post.date_posted }}</small>
+        </div>
+        <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+        <p class="article-content">{{ post.content }}</p>
+      </div>
+    </article>
     {% endfor %}
-</body>
-</html>
+{% endblock content %}
